--- a/assets/style.css
+++ b/assets/style.css
@@ -8,9 +8,11 @@
     font-size: 45px;
     text-align: center;
     color: white;
-    text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
+    text-shadow: -1px 0 white, 0 0.5px white, 0.5px 0 white, 0 -1px white;
 }
-
+body {
+    background-image: url(https://images.unsplash.com/photo-1543325768-557b5f98dfd2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60);
+}
 .card {
     margin-left: 5%;
     margin-right: 5%;
@@ -28,18 +30,18 @@
     color: white;
     
 }
-
-#titleHeader {
+.card-header {
     border-radius: calc(.25rem - 1px) calc(.25rem - 1px) 0 0;
     padding: .75rem 1.25rem;
     margin-bottom: 0;
     background-color: rgba(0,0,0,.03);
     border-bottom: 1px solid rgba(0,0,0,.125);
+    background-color: black;
+    color: white;
 }
-
 #form {
     margin: auto;
-    font-size: 20px;
+    font-size: 15px;
     padding: 15px;
 }
 .small-header {
@@ -47,4 +49,8 @@
     border-color: black;
     background: black;
     color: white;
+}
+#button-submit {
+    background-color: black;
+    border-color: black;
 }
