--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,6 @@
 #main-header {
     background-color: black;
+    text-decoration: underline overline;
     font-size: 500%;
     margin-left: 5%;
     margin-right: 5%;
@@ -9,9 +10,11 @@
     text-align: center;
     color: white;
     text-shadow: -1px 0 white, 0 0.5px white, 0.5px 0 white, 0 -1px white;
+    border-style: solid white;
 }
 body {
-    background-image: url(https://images.unsplash.com/photo-1543325768-557b5f98dfd2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60);
+    /*background-image: url(https://images.unsplash.com/photo-1531182754451-7a788306118d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=6;0)*/
+    background-image: url(https://images.unsplash.com/photo-1533771050060-bb246bb75742?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60);
 }
 .card {
     margin-left: 5%;
@@ -53,4 +56,7 @@ body {
 #button-submit {
     background-color: black;
     border-color: black;
+}
+#titleHeader {
+
 }
