--- a/assets/style.css
+++ b/assets/style.css
@@ -6,7 +6,7 @@
     margin-right: 5%;
     padding: 2%;
     border-radius: 7px;
-    font-size: 45px;
+    font-size: 55px;
     text-align: center;
     color: white;
     text-shadow: -1px 0 white, 0 0.5px white, 0.5px 0 white, 0 -1px white;
@@ -56,5 +56,7 @@ body {
 #button-submit {
     background-color: black;
     border-color: black;
+    width: 100%;
+    box-shadow: 2px 2px 6px 2px grey;
 }
 
