--- a/assets/style.css
+++ b/assets/style.css
@@ -13,9 +13,7 @@
     border-style: solid white;
 }
 body {
-    /*background-image: url(https://images.unsplash.com/photo-1531182754451-7a788306118d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=6;0)*/
-    /*background-image: url(https://images.unsplash.com/photo-1533771050060-bb246bb75742?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60);*/
-    background-image: url(https://images.unsplash.com/photo-1536349255754-0b4b6ce49acd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80);
+    background-image: url(../assets/images/Train-Tracker-Background.jpg);
 }
 .card {
     margin-left: 5%;
@@ -58,5 +56,6 @@ body {
     border-color: black;
     width: 100%;
     box-shadow: 2px 2px 6px 2px grey;
+    color: white;
 }
 
